--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
     align-items: center;
     height: 100%;
     font-family: 'Roboto', sans-serif;
-    background: linear-gradient(90seg, #00d2ff, #3a47d5 100%);
+    background: linear-gradient(90deg, #00d2ff, #3a47d5 100%);
 }
 
 .container {
@@ -34,8 +34,10 @@ body {
 
 .number {
     display: inline-block;
+    margin: 10px 10px;
     width: 140px;
-    font-size: 128px;
+    height: 140px;
+    font-size: 110px;
     font-family: 'Roboto', sans-serif;
     text-align: center;
     text-shadow: -1px 0px 15px rgba(37,27,27,0.25);
@@ -46,10 +48,11 @@ body {
 }
 
 .buttons button {
-    margin: 0 7px;
-    padding: 40px;
+    margin: 15px 7px;
+    padding: 25px;
     border: none;
     border-radius: 50%;
+    background-color: transparent;
 }
 
 #play {
